node/logs.log
2016-03-24T13:37:34.121Z - info: starting test.py
2016-03-24T13:37:34.130Z - info: completing test.py
2016-03-24T13:37:35.119Z - info: starting test.py
2016-03-24T13:37:35.121Z - info: completing test.py
2016-03-24T13:37:36.123Z - info: starting test.py
2016-03-24T13:37:36.124Z - info: completing test.py
2016-03-24T13:37:37.127Z - info: starting test.py
2016-03-24T13:37:37.129Z - info: completing test.py
2016-03-24T13:37:38.130Z - info: starting test.py
2016-03-24T13:37:38.131Z - info: completing test.py
2016-03-24T13:59:19.021Z - info: starting test.py
2016-03-24T13:59:19.030Z - info: completing test.py
2016-03-24T13:59:20.018Z - info: starting test.py
2016-03-24T13:59:20.020Z - info: completing test.py
2016-03-24T13:59:21.020Z - info: starting test.py
2016-03-24T13:59:21.022Z - info: completing test.py
2016-03-24T13:59:22.025Z - info: starting test.py
2016-03-24T13:59:22.027Z - info: completing test.py
2016-03-24T13:59:23.031Z - info: starting test.py
2016-03-24T13:59:23.033Z - info: completing test.py
2016-03-24T13:59:24.039Z - info: starting test.py
2016-03-24T13:59:24.040Z - info: completing test.py
2016-03-24T13:59:53.411Z - info: starting test.py
2016-03-24T13:59:53.420Z - info: completing test.py
2016-03-24T13:59:54.413Z - info: starting test.py
2016-03-24T13:59:54.415Z - info: completing test.py
2016-03-24T13:59:55.417Z - info: starting test.py
2016-03-24T13:59:55.418Z - info: completing test.py
2016-03-24T14:00:03.282Z - info: starting test.py
2016-03-24T14:00:03.290Z - info: completing test.py
2016-03-24T14:00:04.283Z - info: starting test.py
2016-03-24T14:00:04.286Z - info: completing test.py
2016-03-24T14:00:05.289Z - info: starting test.py
2016-03-24T14:00:05.291Z - info: completing test.py
2016-03-24T14:00:06.296Z - info: starting test.py
2016-03-24T14:00:06.298Z - info: completing test.py
2016-03-24T14:00:47.765Z - info: starting test.py
2016-03-24T14:00:47.774Z - info: completing test.py
2016-03-24T14:00:48.767Z - info: starting test.py
2016-03-24T14:00:48.769Z - info: completing test.py
2016-03-24T14:14:28.087Z - info: starting test.py
2016-03-24T14:14:28.096Z - info: completing test.py
2016-03-24T14:14:29.089Z - info: starting test.py
2016-03-24T14:14:29.091Z - info: completing test.py
2016-03-24T14:14:30.089Z - info: starting test.py
2016-03-24T14:14:30.090Z - info: completing test.py
2016-03-24T14:14:41.442Z - info: starting test.py
2016-03-24T14:14:41.450Z - info: completing test.py
2016-03-24T14:14:42.443Z - info: starting test.py
2016-03-24T14:14:42.445Z - info: completing test.py
2016-03-24T14:32:08.385Z - info: starting test.py
2016-03-24T14:32:08.395Z - info: completing test.py
2016-03-24T14:32:09.388Z - info: starting test.py
2016-03-24T14:32:09.390Z - info: completing test.py
2016-03-24T14:32:10.393Z - info: starting test.py
2016-03-24T14:32:10.395Z - info: completing test.py
2016-03-24T14:32:11.400Z - info: starting test.py
2016-03-24T14:32:11.401Z - info: completing test.py
2016-03-24T15:27:28.439Z - info: starting test.py
2016-03-24T15:27:51.158Z - info: starting test.py
2016-03-24T15:27:51.166Z - info: completing test.py
2016-03-24T15:36:39.989Z - info: starting test.py
2016-03-24T15:36:39.997Z - info: completing test.py
2016-03-24T15:38:07.693Z - info: starting test.py
2016-03-24T15:38:07.701Z - info: completing test.py
2016-03-24T15:38:08.695Z - info: starting test.py
2016-03-24T15:38:08.698Z - info: completing test.py
2016-03-24T15:38:31.086Z - info: starting test.py
2016-03-24T15:38:31.094Z - info: completing test.py
2016-03-24T15:47:42.130Z - info: starting test.py
2016-03-24T15:47:42.133Z - info: completing test.py
2016-03-24T15:48:43.105Z - info: starting test.py
2016-03-24T15:48:43.108Z - info: completing test.py
2016-03-24T15:48:59.446Z - info: starting test.py
2016-03-24T15:48:59.450Z - info: completing test.py
2016-03-24T15:49:07.135Z - info: starting test.py
2016-03-24T15:49:07.138Z - info: completing test.py
2016-03-24T15:50:51.422Z - info: starting test.py
2016-03-24T15:50:51.425Z - info: completing test.py
2016-03-24T15:52:29.917Z - info: starting test.py
2016-03-24T15:52:29.926Z - info: completing test.py
2016-03-24T15:52:30.921Z - info: starting test.py
2016-03-24T15:52:30.923Z - info: completing test.py
2016-03-24T15:52:31.927Z - info: starting test.py
2016-03-24T15:52:31.928Z - info: completing test.py
2016-03-24T15:52:32.932Z - info: starting test.py
2016-03-24T15:52:32.936Z - info: completing test.py
2016-03-24T15:52:33.932Z - info: starting test.py
2016-03-24T15:52:33.934Z - info: completing test.py
2016-03-24T15:52:34.938Z - info: starting test.py
2016-03-24T15:52:34.940Z - info: completing test.py
2016-03-24T15:52:35.938Z - info: starting test.py
2016-03-24T15:52:35.940Z - info: completing test.py
2016-03-24T15:53:01.050Z - info: starting test.py
2016-03-24T15:53:01.059Z - info: completing test.py
2016-03-24T15:53:02.050Z - info: starting test.py
2016-03-24T15:53:02.052Z - info: completing test.py
2016-03-24T15:53:03.054Z - info: starting test.py
2016-03-24T15:53:03.055Z - info: completing test.py
2016-03-24T15:53:10.295Z - info: starting test.py
2016-03-24T15:53:10.303Z - info: completing test.py
2016-03-24T15:53:10.318Z - info: error: Error:   File "py_jobs/test.py", line 1
    print 'hey!
              ^
SyntaxError: EOL while scanning string literal

2016-03-24T15:53:11.298Z - info: starting test.py
2016-03-24T15:53:11.300Z - info: completing test.py
2016-03-24T15:53:11.318Z - info: error: Error:   File "py_jobs/test.py", line 1
    print 'hey!
              ^
SyntaxError: EOL while scanning string literal

2016-03-24T15:53:12.302Z - info: starting test.py
2016-03-24T15:53:12.304Z - info: completing test.py
2016-03-24T15:53:12.322Z - info: error: Error:   File "py_jobs/test.py", line 1
    print 'hey!
              ^
SyntaxError: EOL while scanning string literal

